--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "bootstrap": "^5.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.0.0",
     "react_ujs": "^2.6.2",
     "typescript": "^4.6.3",
